bk_ida/gccida/g2/choose_reload_regs_init
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/choose_reload_regs_init/src/reload1.c:5777:17: error: expected expression
*( reload_type *)( v7 + 64), 
                ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/choose_reload_regs_init/src/reload1.c:5777:4: error: use of undeclared identifier 'reload_type'; did you mean 'reload_order'?
*( reload_type *)( v7 + 64), 
   ^~~~~~~~~~~
   reload_order
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/choose_reload_regs_init/src/reload1.c:1652:14: note: 'reload_order' declared here
static short reload_order[MAX_RELOADS];
             ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/choose_reload_regs_init/src/reload1.c:5778:18: error: expected expression
*( machine_mode *)v7); 
                 ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/choose_reload_regs_init/src/reload1.c:5778:4: error: use of undeclared identifier 'machine_mode'
*( machine_mode *)v7); 
   ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/choose_reload_regs_init/src/obj/reload1.o] Error 1
